# signaware-ai

./: README.md  env.template  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
app/routers/: chat.py  document_analysis.py  pii_masking.py  users.py
app/services/: chat_service.py  document_analysis.py  pii_masking.py
scripts/: init_db.py  setup.py  test_api.py
